cabal-version:       2.2
name:                yagi-lsp-server
version:             0.0.1
synopsis:            Yagi Language Server

description:         Yagi Language Server

homepage:            https://github.com/haskell/lsp
license:             MIT
license-file:        LICENSE
author:              Benjamin Bray
maintainer:          benrbray@gmail.com
copyright:           Benjamin Bray, 2022
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

executable yagi-lsp-server
  main-is:             YagiServer.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Wno-unticked-promoted-constructors -main-is YagiServer
  other-modules:       Handlers, State, Files

  build-depends:       base 
                     , aeson
                     , data-default
                     , lens >= 4.15.2
                     , lsp
                     , prettyprinter
                     , stm
                     , text
                     , text-rope
                     , transformers
                     , yagi-lang

executable example-reactor-server
  main-is:             Reactor.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors

  build-depends:       base 
                     , aeson
                     , co-log-core
                     , lens >= 4.15.2
                     , stm
                     , prettyprinter
                     , text
                     , lsp

executable example-simple-server
  main-is:             Simple.hs
  hs-source-dirs:      example
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unticked-promoted-constructors
  build-depends:       base
                     , lsp
                     , text

source-repository head
  type:     git
  location: https://github.com/haskell/lsp
